--- a/file-explorer/src/App.css
+++ b/file-explorer/src/App.css
@@ -1,5 +1,5 @@
 .folder {
-	margin-top: 6px;
+	margin-top: 5px;
 	background: #3b3b3b;
 	display: flex;
 	justify-content: space-between;
@@ -11,6 +11,13 @@
 	margin: 0 5px 2px 0;
 } */
 
+.file-group {
+	margin-top: 5px;
+	display: flex;
+	justify-content: space-between;
+	width: 300px;
+}
+
 .file {
 	display: flex;
 	flex-direction: column;
@@ -20,4 +27,11 @@
 	display: flex;
 	gap: 5px;
 	cursor: pointer;
+}
+
+button {
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
